refator code
