# controllers/auth.controller.js
@@ -13,21 +13,7 @@ const { OK, CreatedResponse } = require("../classes/success/SuccessResponse");
 const { OAuth2Client } = require("google-auth-library");
 const { validationResult } = require("express-validator");
 const { sendVerificationEmail } = require("../mailer");
-const AccessService = require("../services/access.service");
-const generateAccessToken = (userId) => {
-  return jwt.sign({ userId }, process.env.ACCESS_TOKEN_SECRET, {
-    expiresIn: process.env.ACCESS_TOKEN_EXPIRY,
-  });
-};
-
-const generateRefreshToken = (userId) => {
-  return jwt.sign({ userId }, process.env.REFRESH_TOKEN_SECRET, {
-    expiresIn: process.env.REFRESH_TOKEN_EXPIRY,
-  });
-};
-function generateVerificationCode() {
-  return Math.floor(Math.random() * 900000) + 100000;
-}
+const AuthService = require("../services/auth.service");
 
 exports.register = async (req, res) => {
   const errors = validationResult(req);
@@ -35,16 +21,11 @@ exports.register = async (req, res) => {
     throw new BadRequestError("Invalid information");
   }
 
-  try {
-    const newUser = await AccessService.register(req.body);
-    new CreatedResponse({
-      message: "Register successfully",
-      data: { user: newUser },
-    }).send(res);
-  } catch (err) {
-    console.log("err", err);
-    throw new InternalServerError();
-  }
+  const newUser = await AuthService.register(req.body);
+  new CreatedResponse({
+    message: "Register successfully",
+    data: { user: newUser },
+  }).send(res);
 };
 
 exports.login = async (req, res) => {
@@ -52,16 +33,11 @@ exports.login = async (req, res) => {
   if (!errors.isEmpty()) {
     throw new BadRequestError("Invalid information");
   }
-  try {
-    const loginData = await AccessService.login(req.body);
-    new OK({
-      message: "User logged in successfully",
-      data: loginData,
-    }).send(res);
-  } catch (err) {
-    console.log("err", err);
-    throw new InternalServerError();
-  }
+  const loginData = await AuthService.login(req.body);
+  new OK({
+    message: "User logged in successfully",
+    data: loginData,
+  }).send(res);
 };
 
 exports.loginWithGoogle = async (req, res) => {
@@ -70,16 +46,11 @@ exports.loginWithGoogle = async (req, res) => {
     throw new BadRequestError("Invalid information");
   }
 
-  try {
-    const loginData = await AccessService.loginWithGoogle(req.body);
-    new OK({
-      message: "User logged in successfully",
-      data: loginData,
-    }).send(res);
-  } catch (err) {
-    console.log("err", err);
-    throw new InternalServerError();
-  }
+  const loginData = await AuthService.loginWithGoogle(req.body);
+  new OK({
+    message: "User logged in successfully",
+    data: loginData,
+  }).send(res);
 };
 
 exports.refreshToken = async (req, res) => {
@@ -88,16 +59,11 @@ exports.refreshToken = async (req, res) => {
     throw new BadRequestError("Invalid information");
   }
 
-  try {
-    const newAccessToken = await AccessService.refreshToken(req.body);
-    new OK({
-      message: "success",
-      data: { accessToken: newAccessToken },
-    }).send(res);
-  } catch (err) {
-    console.log("err", err);
-    throw new InternalServerError();
-  }
+  const newAccessToken = await AuthService.refreshToken(req.body);
+  new OK({
+    message: "success",
+    data: { accessToken: newAccessToken },
+  }).send(res);
 };
 
 exports.verifyEmail = async (req, res) => {
@@ -106,13 +72,8 @@ exports.verifyEmail = async (req, res) => {
     throw new BadRequestError("Invalid information");
   }
 
-  try {
-    await AccessService.verifyEmail(req.query);
-    new OK({}).send(res);
-  } catch (err) {
-    console.log("err", err);
-    throw new InternalServerError();
-  }
+  await AuthService.verifyEmail(req.query);
+  new OK({}).send(res);
 };
 
 exports.sendEmailVerification = async (req, res) => {
@@ -121,13 +82,8 @@ exports.sendEmailVerification = async (req, res) => {
     throw new BadRequestError("Invalid information");
   }
 
-  try {
-    await AccessService.sendEmailVerification(req.body);
-    new OK({}).send(res);
-  } catch (err) {
-    console.log("err", err);
-    throw new InternalServerError();
-  }
+  await AuthService.sendEmailVerification(req.body);
+  new OK({}).send(res);
 };
 
 exports.resetPassword = async (req, res) => {
@@ -136,16 +92,11 @@ exports.resetPassword = async (req, res) => {
     throw new BadRequestError("Invalid information");
   }
 
-  try {
-    const user = await AccessService.resetPassword(req.body);
-    new OK({
-      message: "Password reset successfully",
-      data: { user },
-    }).send(res);
-  } catch (err) {
-    console.log("err", err);
-    throw new InternalServerError();
-  }
+  const user = await AuthService.resetPassword(req.body);
+  new OK({
+    message: "Password reset successfully",
+    data: { user },
+  }).send(res);
 };
 exports.logout = async (req, res) => {
   const user = await User.findById(req.userId);
@@ -166,40 +117,18 @@ exports.logout = async (req, res) => {
     data: {},
   }).send(res);
 };
-
 exports.changePassword = async (req, res) => {
-  const { currentPassword, newPassword } = req.body;
   const errors = validationResult(req);
-
   if (!errors.isEmpty()) {
     throw new BadRequestError("Invalid information");
   }
 
-  const user = await User.findById(req.userId);
-  const credential = await Credential.findOne({ user: user._id });
-
-  const isMatch = await bcrypt.compare(currentPassword, credential.password);
-
-  if (!isMatch) {
-    throw new BadRequestError("Password is incorrect");
-  }
-
-  bcrypt.hash(newPassword, 12, async (err, passwordHash) => {
-    if (err) {
-      throw new InternalServerError("Hash password failed");
-    } else if (passwordHash) {
-      credential.password = passwordHash;
-
-      try {
-        await credential.save();
-      } catch (err) {
-        throw new InternalServerError("Update password failed");
-      }
-
-      new OK({
-        message: "Password changed successfully",
-        data: { user },
-      }).send(res);
-    }
+  const user = await AuthService.changePassword({
+    ...req.body,
+    userId: req.userId,
   });
+  new OK({
+    message: "Password changed successfully",
+    data: { user },
+  }).send(res);
 };
