# swagger.yaml
@@ -7,9 +7,38 @@ paths:
     post:
       tags:
         - Auth
+      description: Login to the application
+      parameters:
+        - name: body
+          in: body
+          required: true
+          schema:
+            type: object
+            properties:
+              email:
+                type: string
+                description: Email to use for login.
+              password:
+                type: string
+                description: User's password.
       responses:
         '200':
           description: Login successful
+          schema:
+            type: object
+            properties:
+              token:
+                type: string
+                description: The access token.
+              refreshToken:
+                type: string
+                description: The refresh token.
+              user:
+                $ref: '#/definitions/User'
+        '400':
+          description: Incorrect information
+        '404':
+          description: User does not exist or has not been verified
   /auth/logout:
     post:
       tags:
@@ -399,55 +428,6 @@ components:
           - 60d0fe4f7439346e18c6343a
         lastUpdate: '2023-12-05T08:39:32.000Z'
         isInWaitingList: false
-    Credential:
-      type: object
-      required:
-        - user
-        - password
-        - accessToken
-        - refreshToken
-        - refreshTokensUsed
-        - emailVerificationCode
-        - emailVerified
-        - emailVerificationCodeExpires
-      properties:
-        user:
-          type: string
-          description: The ID of the user.
-        password:
-          type: string
-          description: The password of the user.
-        accessToken:
-          type: string
-          description: The access token of the user.
-        refreshToken:
-          type: string
-          description: The refresh token of the user.
-        refreshTokensUsed:
-          type: array
-          items:
-            type: string
-          description: The refresh tokens used by the user.
-        emailVerificationCode:
-          type: string
-          description: The email verification code of the user.
-        emailVerified:
-          type: boolean
-          description: The email verification status of the user.
-        emailVerificationCodeExpires:
-          type: string
-          format: date-time
-          description: The expiration time of the email verification code.
-      example:
-        user: 60d0fe4f7439346e18c6343a
-        password: hashedpassword
-        accessToken: access-token
-        refreshToken: refresh-token
-        refreshTokensUsed:
-          - refresh-token-used
-        emailVerificationCode: verification-code
-        emailVerified: false
-        emailVerificationCodeExpires: '2023-12-05T08:39:32.000Z'
     FriendRequest:
       type: object
       required:
@@ -768,7 +748,6 @@ components:
     User:
       type: object
       required:
-        - username
         - nickname
         - firstname
         - lastname
@@ -777,9 +756,6 @@ components:
         - isOnline
         - lastOnline
       properties:
-        username:
-          type: string
-          description: The username of the user.
         nickname:
           type: string
           description: The nickname of the user.
@@ -833,7 +809,6 @@ components:
           format: date-time
           description: The last time the user was online.
       example:
-        username: user1
         nickname: User One
         firstname: First
         lastname: Last
